Add swap binary

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -45,5 +45,7 @@
       path: bin/random_phrase
     ~/.bin/sr:
       path: bin/sr
+    ~/.bin/swap:
+      path: bin/swap
     ~/.bin/update_last_break:
       path: bin/update_last_break.py
